src/test/ui/loops/loop-no-implicit-break.stderr
error[E0308]: mismatched types
  --> $DIR/loop-no-implicit-break.rs:3:9
   |
LL |         10
   |         ^^ expected `()`, found integer
   |
help: you might have meant to break the loop with this value
   |
LL |         break 10;
   |         ^^^^^   ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
